# Osiris

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
Source/: CMakeLists.txt  Endpoints.h  Osiris.vcxproj  dllmain.cpp
Source/CS2/Classes/: CGlowProperty.h  CSceneObject.h  CUtlMap.h  CUtlVector.h  ClientModeCSNormal.h  Color.h  ConVar.h  ConVarTypes.h  Sound.h
Source/CS2/Constants/: IconURLs.h  PanelIDs.h
Source/CS2/Panorama/: CUIEngine.h  StyleEnums.h
Source/Config/: ConfigFromString.h  ConfigState.h
Source/Features/Common/: InWorldPanelsPerHookState.h  RenderingHookEntityLoop.h
Source/Features/Visuals/: VisualFeaturesStates.h
Source/GameClient/: GameSceneNode.h  GlobalVars.h  MemAlloc.h
Source/GameClient/Entities/: GameRules.h  PlayerPawn.h  PreviewPlayer.h
Source/GameClient/Panorama/: PanelFactory.h  PanoramaImagePanel.h  PanoramaSymbols.h  PanoramaUiEngine.h  StylePropertySymbolMap.h
Source/GlobalContext/: FullGlobalContext.h  OsirisDirectoryPath.h  UnloadFlag.h
Source/Hooks/: ClientModeHooks.h  PeepEventsHook.h
Source/MemoryAllocation/: UniquePtr.h
Source/MemoryPatterns/: PatternFinders.h
Source/MemoryPatterns/Linux/: C4PatternsLinux.h  ClientPatternsLinux.h  CvarPatternsLinux.h  EntitySystemPatternsLinux.h  GlowPropertyPatternsLinux.h  HostageServicesPatternsLinux.h  LinuxPatterns.h  MemAllocPatternsLinux.h  PanoramaUiEnginePatternsLinux.h  SceneObjectUpdaterPatternsLinux.h  SoundSystemPatternsLinux.h  TextEntryPatternsLinux.h  UiItem3dPanelPatternsLinux.h
Source/MemoryPatterns/PatternTypes/: ConVarPatternTypes.h  (+5 more)
Source/MemorySearch/: BytePatternConverter.h  BytePatternStorage.h  BytePatternView.h  PatternSearchResultsView.h
Source/Utils/: Bits.h  DynamicArray.h  FileSlice.h  Meta.h  PrivateTag.h  TypeIndex.h  Wcslen.h
Source/Vmt/: VmtSwapper.h
Tests/: CMakeLists.txt
Tests/FunctionalTests/: CMakeLists.txt
Tests/FunctionalTests/Config/: ConfigCompatibilityTests.cpp
Tests/Mocks/: MockClientPanel.h  MockGameRules.h  MockModelEntity.h  MockPlantedC4.h  MockPlayerController.h  MockSmokeGrenadeProjectile.h
Tests/Mocks/BombTimerMocks/: MockBombSiteIconPanel.h
Tests/Mocks/DefusingAlertMocks/: MockDefusingAlertPanel.h
Tests/Mocks/HudMocks/: MockDeathNotices.h  MockHud.h
Tests/UnitTests/: CMakeLists.txt
Tests/UnitTests/Config/: CMakeLists.txt  ConfigFromStringTests.cpp  ConfigSchemaTests.cpp  ConfigToStringTests.cpp  ConfigVariablesTests.cpp
Tests/UnitTests/Features/: CMakeLists.txt
Tests/UnitTests/Features/Combat/SniperRifles/: NoScopeInaccuracyVisTests.cpp
Tests/UnitTests/Features/Hud/: CMakeLists.txt
Tests/UnitTests/Features/Hud/BombTimer/: BombSiteIconPanelTests.cpp  BombTimerConditionTests.cpp  BombTimerPanelTests.cpp  BombTimerTests.cpp  BombTimerTextPanelTests.cpp  CMakeLists.txt
Tests/UnitTests/Features/Hud/DefusingAlert/: CMakeLists.txt  DefusingAlertConditionTests.cpp  DefusingAlertPanelTests.cpp  DefusingAlertTests.cpp  DefusingCountdownTextPanelTests.cpp
Tests/UnitTests/Features/Hud/KillfeedPreserver/: CMakeLists.txt  KillfeedPreserverContextTests.cpp  KillfeedPreserverTests.cpp
Tests/UnitTests/Features/Hud/PostRoundTimer/: CMakeLists.txt  PostRoundTimerConditionTests.cpp  PostRoundTimerContextTests.cpp  PostRoundTimerPanelFactoryTests.cpp  PostRoundTimerTests.cpp
Tests/UnitTests/Features/Visuals/: CMakeLists.txt
Tests/UnitTests/Features/Visuals/ModelGlow/: CMakeLists.txt  DefuseKitModelGlowTests.cpp  DroppedBombModelGlowTests.cpp  GrenadeProjectileModelGlowTests.cpp  ModelGlowTests.cpp  PlayerModelGlowTests.cpp  TickingBombModelGlowTests.cpp  WeaponModelGlowTests.cpp
Tests/UnitTests/Features/Visuals/OutlineGlow/: CMakeLists.txt  DefuseKitOutlineGlowTests.cpp  DroppedBombOutlineGlowTests.cpp  GrenadeProjectileOutlineGlowTests.cpp  HostageOutlineGlowTests.cpp  OutlineGlowTests.cpp  PlayerOutlineGlowTests.cpp  TickingBombOutlineGlowTests.cpp  WeaponOutlineGlowTests.cpp
Tests/UnitTests/Features/Visuals/ViewmodelMod/: CMakeLists.txt  ViewmodelModTests.cpp
Tests/UnitTests/GameClient/: CMakeLists.txt
Tests/UnitTests/GameClient/Hud/: CMakeLists.txt
Tests/UnitTests/GameClient/Hud/BombStatus/: BombStatusPanelManagerTests.cpp  BombStatusPanelTests.cpp  CMakeLists.txt
Tests/UnitTests/MemorySearch/: BytePatternConverterTests.cpp  BytePatternLiteralTests.cpp  BytePatternStorageTests.cpp  BytePatternTests.cpp  CMakeLists.txt  PatternFinderSIMDTests.cpp  PatternSearchResultTests.cpp
Tests/UnitTests/Platform/: CMakeLists.txt
Tests/UnitTests/Platform/Linux/: SharedObjectTests.cpp
Tests/UnitTests/Platform/Windows/: CMakeLists.txt  MockWindowsPlatformApi.cpp  PebLdrTests.cpp
Tests/UnitTests/Utils/: BitsTests.cpp  CMakeLists.txt  FlagsBuilderTests.cpp  OptionalTests.cpp  PatternFinderTests.cpp  RefCountedHookTests.cpp  ReturnAddressTests.cpp  SpanSliceTests.cpp  StringBuilderTests.cpp
(+46 files in other folders)
